@@ -3,6 +3,7 @@ ___________________________
 Solarus 1.6.0 (in progress)
 ___________________________
 
+* Speed up loading maps by keeping tilesets in a cache (#1019).
 * Fix text_surface:set_horizontal/vertical_alignment() not working.
 * Improve error message of non-square tile patterns with diagonal obstacles.
 
